# Yen

./: AI_USAGE.md  CMakeLists.txt  CONTRIBUTING.md  Contributing.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  Security.md
Linux/: makefile
Linux/Example-codes/: List-1.yen  List-2.yen  List-3.yen  List-4.yen  List-5.yen  Loops-1.yen  Loops-2.yen  Loops-3.yen  main2.yen
Linux/include/: ast.h  compiler.h  lexer.h  parser.h  token.h  value.h
Linux/src/: compiler.cpp  lexer.cpp  main.cpp  parser.cpp
builds/: README.md  build-linux.sh  build-macos.sh  build-windows.bat  ci-build.yml  install.sh
docs/: COMPILER_STATUS.md  COURSE.md  QUICKSTART.md  STDLIB.md  USING_YEN.md
examples/: README.md  simple_test.yen
extension-vscode/: CHANGELOG.md  HOW_TO_INSTALL.txt  INSTALLATION.md  LICENSE  QUICK_START.md  README.md  build.sh  language-configuration.json  package.json  vsc-extension-quickstart.md  yen-language-1.0.0.vsix
extension-vscode/examples/: sample.yen
extension-vscode/snippets/: yen.json
extension-vscode/syntaxes/: yen.tmLanguage.json
include/yen/: ast.h  compiler.h  lexer.h  llvm_codegen.h  native_libs.h  parser.h  stdlib.h  token.h  type_checker.h  value.h
src/: compiler.cpp  compiler_main.cpp  lexer.cpp  llvm_codegen.cpp  main.cpp  native_libs.cpp  parser.cpp  stdlib.cpp  type_checker.cpp
stdlib/: collections.yen  io.yen  string.yen
stdlib/platform/: linux.yen  macos.yen  objc.yen  posix.yen  windows.yen
tests/: example_http_api.yen  example_http_real.yen  example_http_server.yen  http_client.yen  run_tests.sh  run_type_tests.cpp  run_type_tests.sh  showcase.yen  tcp_shell_client.yen  tcp_shell_server.yen  test_arithmetic.yen  test_async.yen  test_block_lambda.yen  test_collections.yen  test_destructuring.yen  test_dowhile.yen  test_errors.yen  test_floats.yen  test_functions.yen  test_higher_order.yen  test_http.yen  test_if_else.yen  test_import_module.yen  test_interpolation.yen  test_json.yen  test_lambdas.yen  test_loops.yen  test_maps.yen  test_match.yen  test_native_collections.yen  test_native_math.yen  test_native_strings.yen  test_net.yen  test_new_features.yen  test_operators.yen  test_os.yen  test_phase1_oop.yen  test_phase2_syntax.yen  test_phase3_operators.yen  test_phase4_advanced_oop.yen  (+11 more)
tests/www/: about.html  api-docs.html  index.html  style.css
tests/www/data/: readme.txt  sample.json
tests/www/scripts/: main.js
